--- a/views/partials/comments.ejs
+++ b/views/partials/comments.ejs
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body">
         <ul class="media-list">
-            <% sidebar.commnets.forEach(function(comment){ %>
+            <% sidebar.comments.forEach(function(comment){ %>
                 <li class="media">
                     <a href="#" class="pull-left">
                         <img src=<%= "http://www.gravatar.com/avatar/"+comment.gravatar%> alt="imagen avatar" class="media-object">
